# A-maze-ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  maze.txt  pyproject.toml  test.py  themes.json
docs/: STEP_BY_STEP_GUIDE.md
src/: README.md  a_maze_ing.py  config.py  dispatcher.py  interfaces.py  main.py  maze.txt  maze_generator.py  setup.py  test.py
src/algo/: README.md  dfs.py
src/hooks/: README.md
src/mazegen/: interfaces.py  maze_generator.py  maze_solver.py
src/mazegen/algo/: dfs.py  kruskal.py  prim.py  wilson.py
src/mazegen/hooks/: blocked_area.py  break_perfect.py  pattern_42.py
src/mazegen/models/: cell.py  maze.py  maze_config.py
src/mazegen/solver/: bfs.py
src/models/: README.md  cell.py  maze.py  theme.py
src/renderer/: README.md  ascii.py
src/solver/: README.md
src/utils/: README.md  file.py  maze_config.py  ui.py
tests/: conftest.py  test.py  test_algo_utils.py  test_ascii_renderer.py  test_bfs.py  test_blocked_area.py  test_break_perfect.py  test_break_perfect_hook.py  test_cell.py  test_config_settings.py  test_dfs.py  test_dispatcher.py  test_exceptions.py  test_interfaces.py  test_kruskal.py  test_maze.py  test_maze_config.py  test_maze_generator.py  test_maze_solver.py  test_pattern_42.py  test_prim.py  test_theme_renderer.py  test_utils_file.py  test_wilson.py
