[project]
name = "a-maze-ing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flake8>=7.3.0",
    "mypy>=2.1.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "rich>=15.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

