[project]
name = "a-maze-ing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "build>=1.5.0",
    "flake8>=7.3.0",
    "mypy>=2.1.0",
    "pip>=26.1.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "readchar>=4.2.2",
    "rich>=15.0.0",
    "setuptools>=82.0.1",
    "types-setuptools>=82.0.0.20260518",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
